# ecs_benchmark

./: CMakeLists.txt  README.md  Taskfile.yml  plot.config.json  vcpkg.json
scripts/gen-benchmark-report/: pyproject.toml  requirements.txt
src/flecs/: CMakeLists.txt
src/pico_ecs/pico_ecs/: PicoEcsApplication.h
src/pico_ecs/pico_ecs/entities/: EntityFactory.h  HeroMonsterEntityFactory.h
src/pico_ecs/pico_ecs/systems/: DamageSystem.cpp  DamageSystem.h  DataSystem.cpp  DataSystem.h  HealthSystem.cpp  HealthSystem.h  MoreComplexSystem.cpp  MoreComplexSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SpriteSystem.cpp  SpriteSystem.h
taskfiles/: Benchmark.yml  Plot.yml  Utils.yml
test/tests/: CMakeLists.txt
