[project]
name = "gen-benchmark-report"
version = "1.1.1"
description = "Generate benchmarks graphs and RESULTS.md with benchmark results"
authors = [
    { name = "Alex Beimler", email = "alex-beimler@web.de" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "docopt>=0.6.2,<0.7",
    "pandas>=1.5.3,<2",
    "psutil>=5.9.8,<6",
    "pystache>=0.6.5,<0.7",
    "pynput>=1.7.6,<2",
    "QtPy>=1.11.3,<2",
    "black>=24.3.0,<25",
    "plotly>=5.20.0,<6",
    "tabulate>=0.9.0,<0.10",
    "kaleido==0.2.1",
    "numpy>=1.26.4,<2",
]

[project.urls]
Homepage = "https://github.com/abeimler/ecs_benchmark/tree/master/scripts/gen-benchmark-report"

[project.scripts]
gen-benchmark-report = "gen_benchmark_report.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gen_benchmark_report"]
